Update jupyter notebook and html files

--- a/SageMaker Project.ipynb
+++ b/SageMaker Project.ipynb
@@ -1822,7 +1822,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Answer:**"
+    "**Answer:**\n",
+    "\n",
+    "\"would love to see it again!\" - Positive\n",
+    "\n",
+    "\"never again\" - Negative\n",
+    "\n",
+    "\"amazing image, but the plot was awful\" - Negative"
    ]
   },
   {
